# python-cline-template

./: .clineignore  .gitattributes  .gitignore  BOOTSTRAP.md  CHANGELOG.md  DEVELOPMENT.md  README.md  TEMPLATE_USAGE.md  designtemp.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.clinerules/: 01-workflow.md  02-python-env.md  03-quality-gates.md  04-safety-deps.md  90-output-format.md  91-pr-template.md
.github/workflows/: ci.yml
devproj/: __init__.py  main.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: bootstrap.ps1  check.ps1  check.sh  fix.ps1
tests/: test_greeting.py  test_smoke.py
